get all expenses, labels and groups
