# src/expense/model.go
@@ -6,11 +6,12 @@ import (
 )
 
 type Expense struct {
-	Id   int `gorm:"primary_key"`
+	ID uint `gorm:"primary_key"`
+	// gorm.Model
 	Name string
 
-	LabelId int
-	GroupId int
+	LabelId uint
+	GroupId uint
 
 	Label label.Label `gorm:"foreignkey:LabelId"`
 	Group group.Group `gorm:"foreignkey:GroupId"`
