# src/label/controller.go
@@ -14,7 +14,7 @@ func NewController(r *gin.RouterGroup, service ILabelService) {
 	controller := &LabelController{
 		service: service,
 	}
-	r.GET("/labels", controller.Get)
+	r.GET("/labels", middleware.AuthMiddleware, controller.Get)
 	r.GET("/labels/full", middleware.AuthMiddleware, controller.GetFull)
 	r.POST("/labels", middleware.AuthMiddleware, controller.Post)
 	r.PUT("/labels", middleware.AuthMiddleware, controller.Put)
@@ -22,10 +22,11 @@ func NewController(r *gin.RouterGroup, service ILabelService) {
 }
 
 // GetLabels godoc
+// @Security ApiKeyAuth
 // @Tags Labels
 // @Accept json
 // @Produce json
-// @Success 200 {string} string "ok"
+// @Success 200 {object} []label.Label
 // @Router /labels [get]
 func (this *LabelController) Get(c *gin.Context) {
 	labels, _ := this.service.Fetch()
@@ -33,6 +34,7 @@ func (this *LabelController) Get(c *gin.Context) {
 }
 
 // GetLabelsFull godoc
+// @Security ApiKeyAuth
 // @Tags Labels
 // @Accept json
 // @Produce json
@@ -43,6 +45,7 @@ func (this *LabelController) GetFull(c *gin.Context) {
 }
 
 // PostLabels godoc
+// @Security ApiKeyAuth
 // @Tags Labels
 // @Accept json
 // @Produce json
@@ -52,6 +55,7 @@ func (this *LabelController) Post(c *gin.Context) {
 }
 
 // PutLabels godoc
+// @Security ApiKeyAuth
 // @Tags Labels
 // @Accept json
 // @Produce json
@@ -61,6 +65,7 @@ func (this *LabelController) Put(c *gin.Context) {
 }
 
 // DeleteLabels godoc
+// @Security ApiKeyAuth
 // @Tags Labels
 // @Accept json
 // @Produce json
